# era-zkevm_test_harness

./: .gitignore  .gitmodules  Cargo.toml  README.md  basic_circuit_proof_10_49.json  basic_circuit_proof_10_49.key  basic_circuit_proof_10_50.json  basic_circuit_proof_10_50.key  basic_circuit_proof_10_51.json  basic_circuit_proof_10_51.key  basic_circuit_proof_10_52.json  basic_circuit_proof_10_52.key  basic_circuit_proof_10_53.json  basic_circuit_proof_10_53.key  basic_circuit_proof_10_54.json  basic_circuit_proof_10_54.key  basic_circuit_proof_10_55.json  basic_circuit_proof_10_55.key  basic_circuit_proof_10_56.json  basic_circuit_proof_10_56.key  basic_circuit_proof_11_57.json  basic_circuit_proof_11_57.key  basic_circuit_proof_12_58.json  basic_circuit_proof_12_58.key  basic_circuit_proof_12_59.json  basic_circuit_proof_12_59.key  basic_circuit_proof_12_60.json  basic_circuit_proof_12_60.key  basic_circuit_proof_12_61.json  basic_circuit_proof_12_61.key  basic_circuit_proof_12_62.json  basic_circuit_proof_12_62.key  basic_circuit_proof_12_63.json  basic_circuit_proof_12_63.key  basic_circuit_proof_12_64.json  basic_circuit_proof_12_64.key  basic_circuit_proof_12_65.json  basic_circuit_proof_12_65.key  basic_circuit_proof_12_66.json  basic_circuit_proof_12_66.key  (+412 more)
.cargo/: config.toml
.github/workflows/: basic_buid.yaml  basic_buid_nighlty.yaml  ci.yaml  circuit-limit-estimator.yml  circuit-synthesis-performance-test.yml  debug_build.yml  geometry-config-generator.yml
circuit_definitions/: Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
circuit_definitions/src/: lib.rs
circuit_definitions/src/aux_definitions/: mod.rs  witness_oracle.rs
circuit_definitions/src/circuit_definitions/: mod.rs  verifier_builder.rs
circuit_definitions/src/circuit_definitions/aux_layer/: compression.rs  mod.rs  wrapper.rs
circuit_definitions/src/circuit_definitions/aux_layer/compression_modes/: mod.rs  mode_1.rs  mode_1_for_wrapper.rs  mode_2.rs  mode_2_for_wrapper.rs  mode_3.rs  mode_3_for_wrapper.rs  mode_4.rs  mode_4_for_wrapper.rs  mode_5.rs  mode_5_for_wrapper.rs  mode_to_l1.rs  mode_to_l1_for_wrapper.rs
circuit_definitions/src/circuit_definitions/base_layer/: code_decommitter.rs  ecrecover.rs  eip4844.rs  events_sort_dedup.rs  keccak256_round_function.rs  l1_messages_merklize.rs  linear_hasher.rs  log_demux.rs  mod.rs  ram_permutation.rs  secp256r1_verify.rs  sha256_round_function.rs  sort_code_decommits.rs  storage_apply.rs  storage_sort_dedup.rs  transient_storage_sort.rs  vm_main.rs
circuit_definitions/src/circuit_definitions/eip4844/: mod.rs
circuit_definitions/src/circuit_definitions/recursion_layer/: circuit_def.rs  leaf_layer.rs  mod.rs  node_layer.rs  recursion_tip.rs  scheduler.rs  verifier_builder.rs
circuit_definitions/src/encodings/: callstack_entry.rs  decommittment_request.rs  log_query.rs  memory_query.rs  mod.rs  recursion_request.rs  repeated_storage_write.rs  state_diff_record.rs
circuit_encodings/: .gitignore  Cargo.toml  README.md
circuit_encodings/src/: callstack_entry.rs  decommittment_request.rs  lib.rs  log_query.rs  memory_query.rs  state_diff_record.rs
circuit_sequencer_api/: Cargo.toml  README.md
circuit_sequencer_api/src/: commitments.rs  geometry_config.rs  lib.rs  proof.rs  queue.rs  sort_storage_access.rs  toolset.rs  utils.rs
geometry_config/: Cargo.toml  README.md
geometry_config/src/: autogenerated.rs  lib.rs
kzg/: Cargo.toml
kzg/src/: consts.rs  lib.rs
paddings/base_layer/: FINALIZATION_DATA_1.json  FINALIZATION_DATA_10.json  FINALIZATION_DATA_12.json  FINALIZATION_DATA_2.json  FINALIZATION_DATA_3.json  FINALIZATION_DATA_4.json  FINALIZATION_DATA_5.json  FINALIZATION_DATA_6.json  FINALIZATION_DATA_7.json  FINALIZATION_DATA_8.json  FINALIZATION_DATA_9.json  PROOF_10.json  PROOF_11.json  PROOF_12.json  PROOF_2.json  PROOF_3.json  PROOF_4.json  PROOF_5.json  PROOF_6.json  PROOF_7.json  PROOF_8.json  PROOF_9.json
setup/aux_layer/: compression_for_wrapper_hint_1.json  compression_for_wrapper_vk_1.json  wrapper_vk_1.key
setup/base_layer/: finalization_hint_1.json  finalization_hint_10.json  finalization_hint_11.json  finalization_hint_12.json  finalization_hint_13.json  finalization_hint_14.json  finalization_hint_15.json  finalization_hint_2.json  finalization_hint_255.json  finalization_hint_3.json  finalization_hint_4.json  finalization_hint_5.json  finalization_hint_6.json  finalization_hint_7.json  finalization_hint_8.json  finalization_hint_9.json  padding_proof_1.json  padding_proof_10.json  padding_proof_11.json  padding_proof_12.json  padding_proof_13.json  padding_proof_2.json  padding_proof_3.json  padding_proof_4.json  padding_proof_5.json  padding_proof_6.json  padding_proof_7.json  padding_proof_8.json  padding_proof_9.json  vk_1.json  vk_10.json  vk_11.json  vk_12.json  vk_13.json  vk_2.json  vk_3.json  vk_4.json  vk_5.json  vk_6.json  vk_7.json  (+2 more)
setup/recursion_layer/: finalization_hint_1.json  finalization_hint_10.json  finalization_hint_11.json  finalization_hint_12.json  finalization_hint_13.json  finalization_hint_14.json  finalization_hint_15.json  finalization_hint_16.json  finalization_hint_17.json  finalization_hint_18.json  finalization_hint_3.json  finalization_hint_4.json  finalization_hint_5.json  finalization_hint_6.json  finalization_hint_7.json  finalization_hint_8.json  finalization_hint_9.json  finalization_hint_eip4844.json  finalization_hint_node.json  finalization_hint_recursion_tip.json  padding_proof_10.json  (+30 more)
src/: capacity_estimator.rs  compute_setups.rs  data_source.rs  entry_point.rs  external_calls.rs  in_memory_data_source.rs  lib.rs  memory.rs  proof_wrapper_utils.rs  prover_utils.rs  toolset.rs  utils.rs
tmp/: rec_output_0_0.json  rec_output_0_1.json  rec_output_0_2.json  rec_output_0_3.json  rec_output_0_4.json  rec_output_0_5.json  rec_output_0_6.json  rec_output_0_7.json  rec_output_1_0.json  rec_proof_0_0.json  rec_proof_0_1.json  rec_proof_0_2.json  rec_proof_0_3.json  rec_proof_0_4.json  rec_proof_0_5.json  rec_proof_0_6.json  rec_proof_0_7.json  rec_vk_0_0.json
(+182 files in other folders)
