[package]
name = "zkevm_test_harness"
version = "1.3.3"
edition = "2021"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>", "Konstantin Panarin <kp@matterlabs.dev>"]

resolver = "2"

[dependencies]
# zk_evm = {path = "../zk_evm"}

zk_evm = {git = "https://github.com/matter-labs/era-zk_evm.git", branch = "v1.3.3"}

num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
rayon = "*"
derivative = "*"
hex = "*"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
crossbeam = "0.8"
tracing = { version= "0.1.26" }
bincode = "*"
test-log = "*"
env_logger = "*"
smallvec = "*"
structopt = "0.3.26"
codegen = "0.2.0"

[profile.release]
debug = true

[profile.bench]
debug = true
