[package]
name = "circuit_encodings"
version = "0.1.42"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# zk_evm = {path = "../../zk_evm"}
# zkevm_circuits = {path = "../../zkevm_circuits", features = ["verbose_circuits"]}

zkevm_circuits = {git = "https://github.com/matter-labs/era-zkevm_circuits.git", branch = "v1.4.1"}
zk_evm = {git = "https://github.com/matter-labs/era-zk_evm.git", branch = "v1.4.1"}

derivative = "*"
serde = {version = "1", features = ["derive"]}


[features]
default = []
log_tracing = ["zkevm_circuits/log_tracing"]