[package]
name = "circuit_sequencer_api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

derivative = "*"
serde = {version = "1", features = ["derive"]}
rayon = "*"
circuit_encodings = {path = "../circuit_encodings"}


[features]
default = []
