[package]
name = "circuit_sequencer_api"
version = "0.1.41"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zk_evm = {git = "https://github.com/matter-labs/era-zk_evm.git", branch = "v1.4.1"}
circuit_encodings = {path = "../circuit_encodings"}
bellman = { package = "bellman_ce", git = "https://github.com/matter-labs/bellman", branch = "dev" }


derivative = "*"
serde = {version = "1", features = ["derive"]}
rayon = "*"


[features]
default = []