[package]
name = "kzg"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

derivative = "*"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
rayon = "*"

boojum = {git = "https://github.com/matter-labs/era-boojum.git", branch = "main"}
zkevm_circuits = {git = "https://github.com/matter-labs/era-zkevm_circuits.git", branch = "v1.4.1"}

[dev-dependencies]
rand = "0.4"

[features]
default = []